# omf-rust

.github/workflows/: ci.yml
omf-python/: Cargo.toml
omf-python/.cargo/: config.toml
omf-python/src/: lib.rs
omf-python/src/file/: reader.rs
